--- a/app/views/history/iteration-june-26/index.html
+++ b/app/views/history/iteration-june-26/index.html
@@ -22,6 +22,18 @@
     </div>
   </div>
 
+  {% set contents = [
+  { text: 'Courses', id: 'courses' },
+  { text: 'Course', id: 'course' },
+  { text: 'Course details from ucas', id: 'course-details-from-ucas' },
+  { text: 'PGCE with QTS course option', id: 'PGCE with QTS course option' },
+  { text: 'QTS with salary course option', id: 'QTS with salary course option' },
+  { text: 'About your organisation', id: 'About your organisation' },
+  { text: 'Requirements and eligibility', id: 'Requirements and eligibility' },
+  { text: 'Preview', id: 'preview' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('Courses', 'courses', '/public/images/history/iteration-june-26/thumbnails/01-courses.png', '/public/images/history/iteration-june-26/01-courses.png', '') }}
 
   {{ macros.screenshot('Course', 'course', '/public/images/history/iteration-june-26/thumbnails/02-course.png', '/public/images/history/iteration-june-26/02-course.png', '') }}
