--- a/app/views/history/new-course-wizard/index.html
+++ b/app/views/history/new-course-wizard/index.html
@@ -12,17 +12,27 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  {% set contents = [
+  { text: 'Title', id: 'title' },
+  { text: 'Qualifications', id: 'qualifications' },
+  { text: 'Start date', id: 'start-date' },
+  { text: 'Duration', id: 'duration' },
+  { text: 'Applications open', id: 'applications-open' },
+  { text: 'Application codes', id: 'application-codes' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('Title', 'title', '/public/images/history/new-course-wizard/thumbnails/01-title.png', '/public/images/history/new-course-wizard/01-title.png', '') }}
-  
+
   {{ macros.screenshot('Qualifications', 'qualifications', '/public/images/history/new-course-wizard/thumbnails/02-qualifications.png', '/public/images/history/new-course-wizard/02-qualifications.png', '') }}
-  
+
   {{ macros.screenshot('Start date', 'start-date', '/public/images/history/new-course-wizard/thumbnails/03-start-date.png', '/public/images/history/new-course-wizard/03-start-date.png', '') }}
-  
+
   {{ macros.screenshot('Duration', 'duration', '/public/images/history/new-course-wizard/thumbnails/04-duration.png', '/public/images/history/new-course-wizard/04-duration.png', '') }}
-  
+
   {{ macros.screenshot('Applications open', 'applications-open', '/public/images/history/new-course-wizard/thumbnails/05-applications-open.png', '/public/images/history/new-course-wizard/05-applications-open.png', '') }}
-  
+
   {{ macros.screenshot('Application codes', 'application-codes', '/public/images/history/new-course-wizard/thumbnails/06-application-codes.png', '/public/images/history/new-course-wizard/06-application-codes.png', '') }}
-  
+
 </main>
 {% endblock %}
