--- a/app/views/history/course-field-guidance/index.html
+++ b/app/views/history/course-field-guidance/index.html
@@ -12,6 +12,14 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  {% set contents = [
+  { text: 'About this course', id: 'about-this-course' },
+  { text: 'Course requirements', id: 'course-requirements' },
+  { text: 'Qualification', id: 'qualification' },
+  { text: 'Salary', id: 'salary' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/course-field-guidance/thumbnails/02-about-this-course.png', '/public/images/history/course-field-guidance/02-about-this-course.png', '') }}
 
   {{ macros.screenshot('Course requirements', 'course-requirements', '/public/images/history/course-field-guidance/thumbnails/03-course-requirements.png', '/public/images/history/course-field-guidance/03-course-requirements.png', '') }}
