--- a/app/views/history/course-with-parts/index.html
+++ b/app/views/history/course-with-parts/index.html
@@ -12,19 +12,30 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  {% set contents = [
+  { text: 'Courses', id: 'courses' },
+  { text: 'Course', id: 'course' },
+  { text: 'Course subject and description', id: 'course-subject-and-description' },
+  { text: 'About this course', id: 'about-this-course' },
+  { text: 'Requirements and qualifications', id: 'requirements-and-qualifications' },
+  { text: 'School placements', id: 'school-placements' },
+  { text: 'Application codes', id: 'application-codes' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('Courses', 'courses', '/public/images/history/course-with-parts/thumbnails/01-courses.png', '/public/images/history/course-with-parts/01-courses.png', '') }}
-  
+
   {{ macros.screenshot('Course', 'course', '/public/images/history/course-with-parts/thumbnails/02-course.png', '/public/images/history/course-with-parts/02-course.png', '') }}
-  
+
   {{ macros.screenshot('Course subject and description', 'course-subject-and-description', '/public/images/history/course-with-parts/thumbnails/03-course-subject-and-description.png', '/public/images/history/course-with-parts/03-course-subject-and-description.png', '') }}
-  
+
   {{ macros.screenshot('About this course', 'about-this-course', '/public/images/history/course-with-parts/thumbnails/04-about-this-course.png', '/public/images/history/course-with-parts/04-about-this-course.png', '') }}
-  
+
   {{ macros.screenshot('Requirements and qualifications', 'requirements-and-qualifications', '/public/images/history/course-with-parts/thumbnails/05-requirements-and-qualifications.png', '/public/images/history/course-with-parts/05-requirements-and-qualifications.png', '') }}
-  
+
   {{ macros.screenshot('School placements', 'school-placements', '/public/images/history/course-with-parts/thumbnails/06-school-placements.png', '/public/images/history/course-with-parts/06-school-placements.png', '') }}
-  
+
   {{ macros.screenshot('Application codes', 'application-codes', '/public/images/history/course-with-parts/thumbnails/07-application-codes.png', '/public/images/history/course-with-parts/07-application-codes.png', '') }}
-  
+
 </main>
 {% endblock %}
