--- a/app/views/history/read-only/index.html
+++ b/app/views/history/read-only/index.html
@@ -19,6 +19,22 @@
     </div>
   </div>
 
+  {% set contents = [
+  { text: 'We imported', id: 'we-imported' },
+  { text: 'Courses', id: 'courses' },
+  { text: 'Course', id: 'course' },
+  { text: 'Course details from ucas', id: 'course-details-from-ucas' },
+  { text: 'About this course', id: 'about-this-course' },
+  { text: 'About this training provider', id: 'about-this-training-provider' },
+  { text: 'Course requirements', id: 'course-requirements' },
+  { text: 'Qualification', id: 'qualification' },
+  { text: 'Salary', id: 'salary' },
+  { text: 'Preview', id: 'preview' },
+  { text: 'Schools', id: 'schools' },
+  { text: 'Organisation', id: 'organisation' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('We imported', 'we-imported', '/public/images/history/read-only/thumbnails/01-we-imported.png', '/public/images/history/read-only/01-we-imported.png', '') }}
 
   {{ macros.screenshot('Courses', 'courses', '/public/images/history/read-only/thumbnails/02-courses.png', '/public/images/history/read-only/02-courses.png', '') }}
