--- a/app/views/history/request-access-iteration-june-29/index.html
+++ b/app/views/history/request-access-iteration-june-29/index.html
@@ -20,6 +20,12 @@
     </div>
   </div>
 
+  {% set contents = [
+  { text: 'Request access', id: 'request-access' },
+  { text: 'Access requested', id: 'access-requested' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('Request access', 'request-access', '/public/images/history/request-access-iteration-june-29/thumbnails/01-request-access.png', '/public/images/history/request-access-iteration-june-29/01-request-access.png', '') }}
 
   {{ macros.screenshot('Access requested', 'access-requested', '/public/images/history/request-access-iteration-june-29/thumbnails/02-access-requested.png', '/public/images/history/request-access-iteration-june-29/02-access-requested.png', '') }}
