--- a/app/views/history/simplified-university-view/index.html
+++ b/app/views/history/simplified-university-view/index.html
@@ -27,6 +27,17 @@
     </div>
   </div>
 
+  {% set contents = [
+  { text: 'Courses', id: 'courses' },
+  { text: 'Course', id: 'course' },
+  { text: 'Course details from ucas', id: 'course-details-from-ucas' },
+  { text: 'About this course', id: 'about-this-course' },
+  { text: 'About this training provider', id: 'about-this-training-provider' },
+  { text: 'Course requirements', id: 'course-requirements' },
+  { text: 'Organisation', id: 'organisation' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
   {{ macros.screenshot('Courses', 'courses', '/public/images/history/simplified-university-view/thumbnails/01-courses.png', '/public/images/history/simplified-university-view/01-courses.png', '') }}
 
   {{ macros.screenshot('Course', 'course', '/public/images/history/simplified-university-view/thumbnails/02-course.png', '/public/images/history/simplified-university-view/02-course.png', '') }}
