--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -36,6 +36,20 @@
         {{ macros.textbox('request-first-name', 'First name') }}
         {{ macros.textbox('request-last-name', 'Last name') }}
         {{ macros.textbox('request-email', 'Email address') }}
+
+        <p>What access should this user have?</p>
+        {% set fields = [
+            {
+              name: 'Access to the same organisations as me'
+            },
+            {
+              name: 'Access to ' + data['training-provider-name']
+            }
+          ]
+        %}
+
+        {{ macros.radioGroup('request-scope', fields) }}
+
         {{ macros.textbox('request-organisation', 'Their organisation') }}
         {{ macros.textareaBasic('request-reason', 'Reason they need access', 2) }}
         <input type="submit" class="button" value="Request access">
