Link to workflows

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/publish-changes">Publishing workflow</a>
+      </h3>
+      <p>
+        Workflow and designs for different publish states.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/ucas-course-status">Course statuses</a>
       </h3>
       <p>
