--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -25,21 +25,27 @@
 
 {% macro aboutYourOrgPublish(state = 'new', publishedBefore = false) %}
 <div class="add-double-bottom-margin status-box">
+  {% if publishedBefore or state == 'published' %}
+    <p>Last published on 10 July 2018</p>
+  {% endif %}
+
   {% if state == 'new' or state == 'draft' %}
+
     {% if state == 'new' %}
-      <p>This information hasn’t been published yet.</p>
-      <hr />
+      <p>You need to complete and publish this information.</p>
     {% endif %}
 
-    <h3 class="heading-medium remove-top-margin">Publish{% if state == 'draft' %} changes{% endif %}</h3>
-    {% if state == 'draft' %}<p>You’ve made changes to this information.</p>{% endif %}
+    {% if state == 'draft' %}
+      <p>You have unpublished changes.</p>
+    {% endif %}
+
+    <hr />
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
     <p>Publishing will update all {{ value('training-provider-name') }} courses.</p>
     <p>
-      <a href="#" class="button">Publish{% if state == 'draft' %} changes{% endif %}</a>
+      <a href="#" class="button">Publish</a>
     </p>
-    {% if publishedBefore %}<p class="font-xsmall">Last published on 10 July 2018</p>{% endif %}
-  {% else %}
-    <p>This information was last published on 10 July 2018</p>
   {% endif %}
 
   <hr />
@@ -51,26 +57,25 @@
 
 {% macro coursePublish(state = 'new', publishedBefore = false, previewLink = '#') %}
 <div class="add-double-bottom-margin status-box">
+  {% if publishedBefore or state == 'published' %}
+    <p>Last published on 10 July 2018</p>
+  {% endif %}
+
+  {% if state == 'draft' %}
+    <p>You have unpublished changes.</p>
+    <hr />
+  {% endif %}
+
   {% if state == 'new' or state == 'draft' %}
     <h3 class="heading-medium remove-top-margin">Preview</h3>
-    <p>See how this course will look with your changes.</p>
+    <p>See how this course looks with your changes.</p>
     <p>Preview your course to check for mistakes before publishing.</p>
     <a href="{{ previewLink }}">Preview course</a>
     <hr />
 
-    <h3 class="heading-medium remove-top-margin">Publish changes</h3>
-    {% if state == 'draft' %}
-      <p>This course has changed since it was last published.</p>
-    {% endif %}
-
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
-    <a href="#" class="button">Publish changes</a>
-
-    {% if publishedBefore %}
-      <p class="font-xsmall">Last published on 10 July 2018</p>
-    {% endif %}
-  {% else %}
-    <p>This course was last published on 10 July 2018</p>
+    <a href="#" class="button">Publish</a>
   {% endif %}
 
   <hr />
