Truncate previews on course overview
* Avoid multiline because it gives false impression of preview
* Give snippet of text to indicate which information it is
* Avoid whitespace issues
* Stops page getting too long

--- a/app/assets/sass/patterns/_course-parts.scss
+++ b/app/assets/sass/patterns/_course-parts.scss
@@ -97,6 +97,11 @@ $course-parts-indent: 35px;
     padding: 0;
     margin-bottom: 10px;
 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 500px;
+
     &--empty {
       color: $grey-1;
     }
