Add course validation documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/validating-on-publish">Validating a course on publish</a>
+      </h3>
+      <p>
+        How validation works when a user tries to publish a course without the required fields.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/publish-changes">Publishing workflow</a>
       </h3>
       <p>
