--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -37,7 +37,7 @@
         {{ macros.textbox('request-last-name', 'Last name') }}
         {{ macros.textbox('request-email', 'Email address') }}
 
-        <p>What access should this user have?</p>
+        <!-- <p>What access should this user have?</p> -->
         {% set fields = [
             {
               name: 'Access to the same organisations as me'
@@ -48,7 +48,7 @@
           ]
         %}
 
-        {{ macros.radioGroup('request-scope', fields) }}
+        {# macros.radioGroup('request-scope', fields) #}
 
         {{ macros.textbox('request-organisation', 'Their organisation') }}
         {{ macros.textareaBasic('request-reason', 'Reason they need access', 2) }}
