--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,10 +17,10 @@
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
-        <a href="/history/validating-on-publish">Validating a course on publish</a>
+        <a href="/history/validating-on-publish">Validating on publish</a>
       </h3>
       <p>
-        How validation works when a user tries to publish a course without the required fields.
+        How validation works when a user tries to publish without the required fields.
       </p>
 
       <h3 class="heading-small">
