--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -13,6 +13,11 @@ $path: "/public/images/";
 @import 'patterns/success-summary';
 @import 'patterns/character-counts';
 
+.not-running-notice {
+  border: 5px solid $govuk-blue;
+  padding: 20px;
+}
+
 #proposition-links {
   color: $white;
   font-weight: bold;
@@ -247,11 +252,11 @@ dl.aligned dd {
 
 .ucas-info-table  {
   .subject-col {
-    width: 30%;
+    width: 25%;
   }
 
   .code-col {
-    width: 15%;
+    width: 10%;
   }
 
   .type-col {
@@ -259,7 +264,7 @@ dl.aligned dd {
   }
 
   .status-col {
-    width: 20%;
+    width: 25%;
   }
 
   .ucas-view-link {
