--- a/app/views/course.html
+++ b/app/views/course.html
@@ -95,7 +95,7 @@
   {% endif %}
 
   <dl class="aligned add-top-margin add-double-bottom-margin">
-    <dt>UCAS status:</dt>
+    <dt>Status:</dt>
     <dd>Running</dd>
     <dt>Training provider code:</dt>
     <dd>{{ course.providerCode }}</dd>
@@ -156,6 +156,25 @@
               {{ macros.coursePart(course.programmeCode + '-other-requirements', 'Other requirements (optional)') }}
             </dl>
           </li>
+          <li class="course-parts-item">
+            <h3 class="course-part-task">Training locations</h3>
+
+            <div style="clear: left; padding-top: 20px">
+            {% for school in course.schools %}
+            <h4 class="heading-small add-top-margin">{{ school.name }} (Code: {{ school.code }})</h4>
+            <dl class="aligned add-top-margin add-double-bottom-margin">
+              <dt>Address:</dt>
+              <dd>{{ school.address }}</dd>
+              <dt>Status:</dt>
+              <dd>Running</dd>
+              <dt>Vacancies:</dt>
+              <dd>Full time vacancies</dd>
+              <dt>Apply from:</dt>
+              <dd>October 2018</dd>
+            </dl>
+            {% endfor %}
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -164,31 +183,31 @@
     </div>
   </div>
 
-  <h3 class="heading-medium">Training locations</h3>
-  <table>
+
+
+  <!-- <table>
     <thead>
       <tr>
-        <th>Location name</th>
-        <th>Address</th>
-        <th>Code</th>
-        <th>Full time vacancies</th>
-        <th>Part time vacancies</th>
-        <th>Applications accepted from</th>
+        <th>Name and address</th>
+        <th>Vacancies</th>
+        <th>Status</th>
+        <th>Apply from</th>
       </tr>
     </thead>
     <tbody>
       {% for school in course.schools %}
       <tr>
-        <td>{{ school.name }}</td>
-        <td>{{ school.address }}</td>
-        <td>{{ school.code }}</td>
-        <td>Vacancies</td>
-        <td>Not applicable</td>
+        <td>
+          {{ school.name }} (Code: {{ school.code }})<br />
+          {{ school.address }}
+        </td>
+        <td>Full time vacancies</td>
+        <td>Running</td>
         <td>26 Oct 2018</td>
       </tr>
       {% endfor %}
     </tbody>
-  </table>
+  </table> -->
 </main>
 
 {% endblock %}
