--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,6 +14,15 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-medium">August 2018</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/course-not-running">Course statuses – Iteration 3 August 2018</a>
+      </h3>
+      <p>
+        A more indepth look at UCAS course status and how it’ll affect publishing.
+      </p>
+
       <h2 class="heading-medium">July 2018</h2>
 
       <h3 class="heading-small">
