Add link to Trello ticket

--- a/app/views/history/course-not-running/index.html
+++ b/app/views/history/course-not-running/index.html
@@ -39,6 +39,10 @@
 
       <h2 class="heading-medium">Courses that aren’t running</h2>
       <p>Courses that aren’t running can’t be edited. The fields and publish actions do not show.</p>
+
+      <p>
+        <a href="https://trello.com/c/BOvg2Duh/46-design-workflow-for-courses-that-are-not-published-because-of-their-ucas-status">Trello ticket</a>
+      </p>
     </div>
   </div>
 
