--- a/app/views/course.html
+++ b/app/views/course.html
@@ -41,47 +41,7 @@
     </p>
   </div> -->
 
-  {% if data[course.programmeCode + '-show-errors'] and errors %}
-  <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
-    <h3 class="govuk-heading-m error-summary-heading" id="error-summary-heading-example-1">
-      We couldn’t publish this course because some information was missing
-    </h3>
-    <p>
-      Fix the following problems and try publishing again:
-    </p>
-    <ul class="error-summary-list">
-      {% for error in errors %}
-      <li><a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}{{ error.link }}">{{ error.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-  {% endif %}
-
-  <!-- <div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
-    <h3 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
-      We couldn’t publish this course because some information was missing
-    </h3>
-    <p>
-      Fix the following problems and try publishing again:
-    </p>
-    <ul class="error-summary-list">
-      <li>
-        <a href="#">Give details about this course</a>
-      </li>
-      <li>
-        <a href="#">Give details about how school placements work</a>
-      </li>
-      <li>
-        <a href="#">Enter a course length</a>
-      </li>
-      <li>
-        <a href="#">Enter course fees for UK and EU students</a>
-      </li>
-      <li>
-        <a href="#">Give details about the qualifications needed</a>
-      </li>
-    </ul>
-  </div> -->
+  {% include "course/_errors.html" %}
 
   {% if data[subject.slug + '-' + accrediting.slug + '-qa'] == 'true' %}
     <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
@@ -179,7 +139,10 @@
       </div>
     </div>
     <div class="column-one-third">
-      {{ macros.coursePublish('new', false, '/preview/' +  accrediting.slug + '/' + course.programmeCode) }}
+      {% set previewLink = '/preview/' +  accrediting.slug + '/' + course.programmeCode %}
+      {% set publishLink = '/publish/' +  accrediting.slug + '/' + course.programmeCode %}
+
+      {{ macros.coursePublish('new', false, previewLink, publishLink) }}
     </div>
   </div>
 
