--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -12,6 +12,8 @@
     {{ title }}
   </h1>
 
+  {% include "course/_errors.html" %}
+
   <div class="grid-row">
     <div class="column-two-thirds">
       <form action="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" method="post">
